<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="event_image">Event Image</string>
    <string name="register_event">Register for Event</string>
    <string name="description">Description</string>
    <string name="owner_format">Organizer: %s</string>
    <string name="time_format">Time: %s</string>
    <string name="quota_format">Remaining Quota: %d</string>
    <string name="searchbar_hint">Search Event</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_notification">Enable notification</string>
    <string name="no_favorite_events">No favorite events yet</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
</resources>