<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.hanifalfaqih.dicodingevent_submissionbfaa.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="id.hanifalfaqih.dicodingevent_submissionbfaa.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcoming"/>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="id.hanifalfaqih.dicodingevent_submissionbfaa.ui.finished.FinishedFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished"/>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="id.hanifalfaqih.dicodingevent_submissionbfaa.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="id.hanifalfaqih.dicodingevent_submissionbfaa.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting"/>

</navigation>
